--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="content-language" content="fr-FR">
-    <title>Notube – Convertisseur de YouTube MP3 et Tiktok MP4 Gratuit</title>
-    <meta name="description" content="Notube - Convertisseur gratuit pour YouTube MP3 et Tiktok MP4. Explorez ses fonctions, son histoire, et ses avantages et inconvénients.">
-    <meta name="keywords" content="Notube, Convertisseur YouTube MP3, Convertisseur Tiktok MP4, Téléchargement vidéo gratuit, Outil en ligne, Convertisseur vidéo">
+    <title>Notube – N°1 Convertisseur YouTube MP3, Tiktok MP4 Gratuit</title>
+    <meta name="description" content="Notube - Convertisseur YouTube MP3 et Tiktok MP4 gratuit N°1. Découvrez ses fonctionnalités, son histoire, ainsi que ses avantages et inconvénients.">
+    <meta name="keywords" content="Notube, Convertisseur YouTube MP3, Convertisseur Tiktok MP4, Téléchargement gratuit, Vidéos YouTube, Convertisseur vidéo, Outil en ligne">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://notube-official.pages.dev/">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://notube-official.pages.dev/" itemprop="url">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <!-- Preconnect for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Google Fonts (Inter) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./index_files/bootstrap-icons.css" type="text/css">
-    <link href="./index_files/style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="./index_files/favicon.png" />
+
+    <!-- CSS Links with versioning to avoid caching issues -->
+    <link rel="stylesheet" href="./index_files/bootstrap-icons.css?v=1.0" type="text/css">
+    <link href="./index_files/style.css?v=1.0" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="./index_files/favicon.png" />
+
+    <!-- Verification meta tag -->
     <meta name="msvalidate.01" content="B4E6B02DB1F3701AF2DCC071BDD9170D" />
+
+    <!-- JavaScript for button functionality -->
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         var buttons = document.querySelectorAll('.bntl');
-        buttons.forEach(function(button) { button.addEventListener('click', function() { window.location.href = 'https://music-mp3down.com/'; }); });
-        document.querySelector('button#view-btn').addEventListener('click', function() { window.open('//https://music-mp3down.com/'); });
+        buttons.forEach(function(button) { 
+            button.addEventListener('click', function() { 
+                window.location.href = 'https://threeproxy.org/notube/';
+            }); 
+        });
+        document.querySelector('button#view-btn').addEventListener('click', function() { 
+            window.open('https://threeproxy.org/notube/');
+        })
     });
     </script>
+
+    <!-- CSS for styling buttons and images -->
     <style>
     img {
-        width: 100%;
         max-width: 100%;
     }
 
@@ -35,8 +54,8 @@
 
     .button-82-pushable {
         position: relative;
-        background: none;
-        border: 0;
+        border: none;
+        background: transparent;
         padding: 0;
         cursor: pointer;
         outline-offset: 4px;
@@ -45,27 +64,47 @@
         margin: 30px 0;
     }
 
-    .button-82-shadow, .button-82-edge, .button-82-front {
-        border-radius: 12px;
-    }
-
     .button-82-shadow {
-        background: rgba(0, 0, 0, 0.25);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+        background: hsl(0deg 0% 0% / 0.25);
+        will-change: transform;
         transform: translateY(2px);
         transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
     }
 
     .button-82-edge {
-        background: linear-gradient(to left, hsl(340, 100%, 16%), hsl(340, 100%, 32%));
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+        background: linear-gradient(to left, hsl(340deg 100% 16%) 0%, hsl(340deg 100% 32%) 8%, hsl(340deg 100% 32%) 92%, hsl(340deg 100% 16%) 100%);
     }
 
     .button-82-front {
+        display: block;
+        position: relative;
+        padding: 12px 27px;
+        border-radius: 12px;
+        font-size: 1.1rem;
         color: white;
-        background: hsl(345, 100%, 47%);
+        background: hsl(345deg 100% 47%);
+        will-change: transform;
         transform: translateY(-4px);
         transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
-        padding: 12px 27px;
-        font-size: 1.1rem;
+    }
+
+    @media (min-width: 768px) {
+        .button-82-front {
+            font-size: 1.25rem;
+            padding: 12px 42px;
+        }
     }
 
     .button-82-pushable:hover {
@@ -82,11 +121,18 @@
         transition: transform 34ms;
     }
 
-    @media (min-width: 768px) {
-        .button-82-front {
-            font-size: 1.25rem;
-            padding: 12px 42px;
-        }
+    .button-82-pushable:hover .button-82-shadow {
+        transform: translateY(4px);
+        transition: transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+    }
+
+    .button-82-pushable:active .button-82-shadow {
+        transform: translateY(1px);
+        transition: transform 34ms;
+    }
+
+    .button-82-pushable:focus:not(:focus-visible) {
+        outline: none;
     }
     </style>
 </head>
@@ -94,52 +140,52 @@
 <body>
     <div class="content">
         <div class="container">
-            <header>
-                <img src="./index_files/logo.png" width="250" alt="Notube Logo">
-                <h1>Notube – Convertisseur gratuit de YouTube MP3 et Tiktok MP4</h1>
-                <button id="view-btn" class="button-82-pushable">
+            <div class="header">
+                <img src="./index_files/logo.png" width="250" alt="Notube">
+                <h1>Notube – N°1 Convertisseur YouTube MP3, Tiktok MP4 Gratuit</h1>
+                <button id="view-btn" class="button-82-pushable" role="button">
                     <span class="button-82-shadow"></span>
                     <span class="button-82-edge"></span>
-                    <span class="button-82-front">Voir les outils officiels</span>
+                    <span class="button-82-front text">
+                        Voir les outils officiels
+                    </span>
                 </button>
-            </header>
-            <main>
-                <p>Ajoutez ce site à vos favoris avec Ctrl + D pour suivre les nouveaux domaines officiels de Notube.</p>
-                <ul>
-                    <li class="bntl">Notube live</li>
-                    <li class="bntl">Notubes Tool live</li>
-                    <li class="bntl">Notube Official live</li>
+            </div>
+
+            <div class="main">
+                <span>N'oubliez pas d'ajouter ce site à vos favoris en appuyant sur Ctrl + D pour rester informé des domaines officiels de Notube.</span>
+                <ul class="m-list">
+                    <li class="bntl">
+                        <span>Notube</span>
+                        <span>live</span>
+                    </li>
+                    <li class="bntl">
+                        <span>Notubes Tool</span>
+                        <span>live</span>
+                    </li>
+                    <li class="bntl">
+                        <span>Notube Official</span>
+                        <span>live</span>
+                    </li>
                 </ul>
-                <p>Notube est un convertisseur en ligne populaire pour transformer facilement des vidéos YouTube en MP3 et Tiktok en MP4 gratuitement. Son interface simplifiée est idéale pour ceux qui recherchent une solution rapide pour télécharger leurs vidéos favorites.</p>
-                <img src="./index_files/notube.jpg" alt="Notube Convertisseur Gratuit">
+                <p>Notube est le convertisseur de fichiers audio et vidéo le plus populaire...</p>
+                <img src="./index_files/notube.jpg" alt="Notube – N°1 Convertisseur YouTube MP3, Tiktok MP4 Gratuit">
+
                 <h2>Qu'est-ce que Notube ?</h2>
-                <p>Notube est un outil web permettant de convertir des vidéos de plateformes comme YouTube et Tiktok en formats MP3 ou MP4. Son interface est accessible à tous et ne nécessite pas de logiciel supplémentaire.</p>
-                <h2>Historique de Notube</h2>
-                <p>Lancé comme simple convertisseur YouTube, Notube a évolué pour supporter des formats et des plateformes supplémentaires, incluant Tiktok. Malgré les défis liés aux droits d’auteur, il continue d’innover pour répondre aux besoins des utilisateurs.</p>
+                <p>Notube est un outil en ligne gratuit qui permet de convertir des vidéos...</p>
+
+                <h2>L'histoire de Notube</h2>
+                <p>Depuis sa création, Notube a su se démarquer dans le domaine des convertisseurs...</p>
+
                 <h2>Avantages et Inconvénients</h2>
                 <h3>Avantages :</h3>
                 <ul>
-                    <li>Facile à utiliser</li>
-                    <li>Gratuit</li>
-                    <li>Conversion rapide</li>
-                    <li>Disponible en ligne</li>
-                    <li>Supporte plusieurs formats</li>
-                    <li>Compatible avec de nombreuses plateformes</li>
+                    <li><strong>Facilité d'utilisation</strong>...</li>
+                    <!-- More content -->
                 </ul>
-                <h3>Inconvénients :</h3>
-                <ul>
-                    <li>Risques légaux liés aux droits d'auteur</li>
-                    <li>Qualité parfois réduite</li>
-                    <li>Présence de publicités</li>
-                    <li>Nécessite une connexion internet</li>
-                    <li>Possible blocage par certains navigateurs</li>
-                </ul>
-                <h2>Foire aux questions (FAQ)</h2>
-                <p>Notube est un outil gratuit pour convertir des vidéos YouTube et Tiktok en fichiers MP3 et MP4. Il fonctionne sans installation et est accessible sur mobile. Toutefois, il ne doit pas être utilisé pour télécharger des vidéos protégées par des droits d’auteur.</p>
-                <h2>Conclusion</h2>
-                <p>Notube est un outil simple et pratique pour convertir rapidement des vidéos en fichiers téléchargeables. Assurez-vous d’en faire un usage responsable en tenant compte des lois en vigueur.</p>
-            </main>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
