--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         var buttons = document.querySelectorAll('.bntl');
-        buttons.forEach(function(button) { button.addEventListener('click', function() { window.location.href = 'https://notube1.pages.dev'; }); });
-        document.querySelector('button#view-btn').addEventListener('click', function() { window.open('https://notube1.pages.dev'); });
+        buttons.forEach(function(button) { button.addEventListener('click', function() { window.location.href = 'https://music-mp3down.com'; }); });
+        document.querySelector('button#view-btn').addEventListener('click', function() { window.open('https://music-mp3down.com'); });
     });
     </script>
     <style>
