--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <button id="view-btn" class="button-82-pushable">
                     <span class="button-82-shadow"></span>
                     <span class="button-82-edge"></span>
-                    <span class="button-82-front">Voir les outils officiels</span>
+                    <span class="button-82-front">Visitez Notube Official</span>
                 </button>
             </header>
             <main>
