--- a/index.html
+++ b/index.html
@@ -23,63 +23,71 @@
         document.querySelector('button#view-btn').addEventListener('click', function() { window.open('https://music-mp3down.com'); });
     });
     </script>
-    <style>
+        <style>
     img {
-        width: 100%;
         max-width: 100%;
     }
 
-    h2, h3 {
+    h2,
+    h3 {
         color: #c0c0c0;
     }
 
+    /* CSS */
     .button-82-pushable {
         position: relative;
-        background: none;
-        border: 0;
+        border: none;
+        background: transparent;
         padding: 0;
         cursor: pointer;
         outline-offset: 4px;
         transition: filter 250ms;
         user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
         margin: 30px 0;
     }
 
-    .button-82-shadow, .button-82-edge, .button-82-front {
-        border-radius: 12px;
-    }
-
     .button-82-shadow {
-        background: rgba(0, 0, 0, 0.25);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+        background: hsl(0deg 0% 0% / 0.25);
+        will-change: transform;
         transform: translateY(2px);
-        transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
+        transition:
+            transform 600ms cubic-bezier(.3, .7, .4, 1);
     }
 
     .button-82-edge {
-        background: linear-gradient(to left, hsl(340, 100%, 16%), hsl(340, 100%, 32%));
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+        background: linear-gradient(to left,
+            hsl(340deg 100% 16%) 0%,
+            hsl(340deg 100% 32%) 8%,
+            hsl(340deg 100% 32%) 92%,
+            hsl(340deg 100% 16%) 100%);
     }
 
     .button-82-front {
-        color: white;
-        background: hsl(345, 100%, 47%);
-        transform: translateY(-4px);
-        transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
+        display: block;
+        position: relative;
         padding: 12px 27px;
+        border-radius: 12px;
         font-size: 1.1rem;
-    }
-
-    .button-82-pushable:hover {
-        filter: brightness(110%);
-    }
-
-    .button-82-pushable:hover .button-82-front {
-        transform: translateY(-6px);
-        transition: transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-    }
-
-    .button-82-pushable:active .button-82-front {
-        transform: translateY(-2px);
-        transition: transform 34ms;
+        color: white;
+        background: hsl(345deg 100% 47%);
+        will-change: transform;
+        transform: translateY(-4px);
+        transition:
+            transform 600ms cubic-bezier(.3, .7, .4, 1);
     }
 
     @media (min-width: 768px) {
@@ -87,6 +95,37 @@
             font-size: 1.25rem;
             padding: 12px 42px;
         }
+    }
+
+    .button-82-pushable:hover {
+        filter: brightness(110%);
+        -webkit-filter: brightness(110%);
+    }
+
+    .button-82-pushable:hover .button-82-front {
+        transform: translateY(-6px);
+        transition:
+            transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+    }
+
+    .button-82-pushable:active .button-82-front {
+        transform: translateY(-2px);
+        transition: transform 34ms;
+    }
+
+    .button-82-pushable:hover .button-82-shadow {
+        transform: translateY(4px);
+        transition:
+            transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+    }
+
+    .button-82-pushable:active .button-82-shadow {
+        transform: translateY(1px);
+        transition: transform 34ms;
+    }
+
+    .button-82-pushable:focus:not(:focus-visible) {
+        outline: none;
     }
     </style>
 </head>
