--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
                     <li class="bntl">Notubes Tool live</li>
                     <li class="bntl">Notube Official live</li>
                 </ul>
-                <p>Notube est un convertisseur en ligne populaire pour transformer facilement des vidéos YouTube en MP3 et Tiktok en MP4 gratuitement. Son interface simplifiée est idéale pour ceux qui recherchent une solution rapide pour télécharger leurs vidéos favorites.</p>
+                <p>Notube est un convertisseur en ligne très utilisé qui permet aux utilisateurs de transformer facilement des vidéos YouTube en MP3 et des clips TikTok en formats MP4 gratuitement. Son interface conviviale en fait un choix idéal pour ceux qui recherchent un moyen rapide et simple de télécharger leurs vidéos préférées.</p>
                 <img src="./index_files/notube.jpg" alt="Notube Convertisseur Gratuit">
                 <h2>Qu'est-ce que Notube ?</h2>
-                <p>Notube est un outil web permettant de convertir des vidéos de plateformes comme YouTube et Tiktok en formats MP3 ou MP4. Son interface est accessible à tous et ne nécessite pas de logiciel supplémentaire.</p>
+                <p>Notube est un outil en ligne conçu pour convertir des vidéos provenant de plateformes telles que YouTube et TikTok en formats MP3 ou MP4. Il propose une interface conviviale qui ne nécessite aucun logiciel supplémentaire pour fonctionner, ce qui le rend accessible à tous.</p>
                 <h2>Historique de Notube</h2>
-                <p>Lancé comme simple convertisseur YouTube, Notube a évolué pour supporter des formats et des plateformes supplémentaires, incluant Tiktok. Malgré les défis liés aux droits d’auteur, il continue d’innover pour répondre aux besoins des utilisateurs.</p>
+                <p>À l'origine conçu comme un convertisseur basique pour YouTube, Notube a progressivement élargi ses fonctionnalités pour inclure divers formats et intégrer d'autres plateformes telles que TikTok. Malgré les obstacles liés aux problèmes de droits d'auteur, la plateforme continue d'innover pour répondre aux attentes de ses utilisateurs.</p>
                 <h2>Avantages et Inconvénients</h2>
                 <h3>Avantages :</h3>
                 <ul>
@@ -174,9 +174,9 @@
                     <li>Possible blocage par certains navigateurs</li>
                 </ul>
                 <h2>Foire aux questions (FAQ)</h2>
-                <p>Notube est un outil gratuit pour convertir des vidéos YouTube et Tiktok en fichiers MP3 et MP4. Il fonctionne sans installation et est accessible sur mobile. Toutefois, il ne doit pas être utilisé pour télécharger des vidéos protégées par des droits d’auteur.</p>
+                <p>Notube est une plateforme gratuite qui permet de transformer des vidéos provenant de YouTube et TikTok en fichiers MP3 et MP4. Cet outil fonctionne directement en ligne, sans nécessiter d'installation, et est également optimisé pour une utilisation sur mobile. Cependant, il est important de noter qu'il ne doit pas être utilisé pour télécharger des vidéos soumises à des droits d'auteur.</p>
                 <h2>Conclusion</h2>
-                <p>Notube est un outil simple et pratique pour convertir rapidement des vidéos en fichiers téléchargeables. Assurez-vous d’en faire un usage responsable en tenant compte des lois en vigueur.</p>
+                <p>Notube est une solution efficace et conviviale pour transformer des vidéos en fichiers téléchargeables en un rien de temps. Il est important de l'utiliser de manière responsable, en veillant à respecter les réglementations légales en vigueur.</p>
             </main>
         </div>
     </div>
